<resources>
    <string name="app_name">e-Susanto</string>
    <string name="beranda">Beranda</string>
    <string name="analisis">Analisis</string>
    <string name="berita">Berita</string>
    <string name="profile">Profile</string>
    <string name="selamat_pagi">Selamat pagi,</string>
    <string name="selamat_siang">Selamat siang,</string>
    <string name="selamat_sore">Selamat sore,</string>
    <string name="selamat_malam">Selamat malam,</string>
    <string name="full_name">Ahmad Nur Halim</string>
    <string name="icon_notification">icon notification</string>
    <string name="image_banner">image banner</string>
    <string name="notification">Notification</string>
    <string name="relawan">Relawan</string>
    <string name="icon_relawan">icon relawan</string>
    <string name="pendukung">Pendukung</string>
    <string name="real_count">Real Count</string>
    <string name="icon_pendukung">icon pendukung</string>
    <string name="icon_quick_count">icon quick count</string>
    <string name="admin">Admin</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="volunteer">Volunteer</string>
    <string name="supporter">Supporter</string>
    <string name="cari_relawan">Cari Relawan</string>
    <string name="menunggu_persetujuan">Menunggu\npersetujuan</string>
    <string name="icon_back">icon back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_login">image login</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="masukkan_email_telpon_anda">Masukkan email/telpon anda</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="btn_lupa_password">Lupa password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="tambah_relawan">Tambah Relawan</string>
    <string name="back_to_dashboard">back to dashboard</string>
    <string name="profil_sbr">Profil SBR</string>
    <string name="jadwal">Jadwal</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="interaksi">Interaksi</string>
    <string name="galeri">Galeri</string>
    <string name="kontak">Kontak</string>
    <string name="icon_profil_sbr">icon profil sbr</string>
    <string name="icon_jadwal">icon jadwal</string>
    <string name="icon_aktifitas">icon aktifitas</string>
    <string name="icon_interaksi">icon interaksi</string>
    <string name="icon_galeri">icon galeri</string>
    <string name="icon_kontak">icon kontak</string>
    <string name="masukkan_nik">Masukkan NIK</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="opini">Opini</string>
    <string name="foto_profil">foto profil</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="no_hp">No. HP</string>
    <string name="masukkan_nomor_handphone">Masukkan Nomor Handphone</string>
    <string name="masukkan_tempat_lahir">Masukkan Tempat Lahir</string>
    <string name="masukkan_tanggal_lahir">Masukkan Tanggal Lahir</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="rt">RT</string>
    <string name="tps">TPS</string>
    <string name="rw">RW</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="agama">Agama</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="simpan">Simpan</string>
    <string name="akun">Akun</string>
    <string name="icon_lock">icon lock</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_nomor_handphone">Ubah Nomor Handphone</string>
    <string name="keluar"><u>Keluar</u></string>
    <string name="web_is_down">Web is down</string>
    <string name="cek_dpt">Cek DPT</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="gambar_berita">gambar berita</string>
    <string name="masukkan_nama_anda">Masukkan nama anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="kirim_email">Kirim Email</string>
    <string name="gambar_opinion">gambar opinion</string>
    <string name="dukungan">Dukungan</string>
    <string name="kinerja_relawan">Kinerja Relawan</string>
    <string name="total_rekrutan">Total Rekrutan</string>
    <string name="icon_analysis">icon analysis</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="lokasi_wilayah">Lokasi Wilayah</string>
    <string name="sebaran_wilayah_pendukung">Sebaran Wilayah Pendukung</string>
    <string name="sebaran_wilayah_relawan">Sebaran Wilayah Relawan</string>
    <string name="demografi_rekrutan">Demografi Rekrutan</string>
    <string name="gambar_susanto">Gambar Susanto</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="cari_tps">Cari TPS</string>
    <string name="total_suara">Total Suara</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="kamera">Kamera</string>
    <string name="gambar_post">Gambar Post</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="interaksi_dengan_sbr">Interaksi dengan SBR</string>
    <string name="baca_selengkapnya">Baca Selengkapnya</string>
    <string name="detail_interaksi">Detail Interaksi</string>
    <string name="komentar">Komentar</string>
    <string name="tulis_komentar_di_sini">Tulis komentar di sini</string>
    <string name="detail_relawan">Detail Relawan</string>
    <string name="thn">-- thn</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="total">Total</string>
    <string name="daftar_rekrutan">Daftar Rekrutan</string>
    <string name="demografi_usia_pendukung">Demografi Usia Pendukung</string>
    <string name="demografi_usia_relawan">Demografi Usia Relawan</string>
    <string name="_0">0</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="cari_pendukung">Cari Pendukung</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="nama_required">Nama*</string>
    <string name="no_hp_required">No. HP*</string>
    <string name="tempat_lahir_required">Tempat Lahir*</string>
    <string name="tanggal_lahir_required">Tanggal Lahir*</string>
    <string name="jenis_kelamin_required">Jenis Kelamin*</string>
    <string name="alamat_required">Alamat*</string>
    <string name="rt_required">RT*</string>
    <string name="rw_required">RW*</string>
    <string name="tps_required">TPS*</string>
    <string name="provinsi_required">Provinsi*</string>
    <string name="kabupaten_required">Kabupaten*</string>
    <string name="kecamatan_required">Kecamatan*</string>
    <string name="kelurahan_required">Kelurahan*</string>
    <string name="agama_required">Agama*</string>
    <string name="empty_placeholder">--</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="tambah_pendukung">Tambah Pendukung</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tempat_amp_tanggal_lahir"><![CDATA[Tempat & Tanggal Lahir]]></string>
    <string name="usia">Usia</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="detail_pendukung">Detail Pendukung</string>
    <string name="tambah_interaksi">Tambah Interaksi</string>
    <string name="buat_topik">Buat Topik</string>
    <string name="judul_required">Judul*</string>
    <string name="tulis_judul_di_sini">Tulis judul di sini</string>
    <string name="pesan_required">Pesan*</string>
    <string name="tulis_sesuatu_di_sini">Tulis sesuatu di sini</string>
    <string name="kirim">Kirim</string>
    <string name="lampiran">Lampiran*</string>
    <string name="foto_maks_5_mb">*Foto maks 5 Mb</string>
    <string name="interaksi_lebih_dekat_nbersama_sama">Interaksi lebih dekat,\nbersama-sama!</string>
    <string name="dot_separator">•</string>
    <string name="statistik">Statistik</string>
    <string name="pertumbuhan_pendukung">Pertumbuhan Pendukung</string>
    <string name="pertumbuhan_relawan">Pertumbuhan Relawan</string>
    <string name="demografi_gender">Demografi Gender</string>
    <string name="total_dukungan">Total Dukungan</string>
    <string name="_30_hari_terakhir">30 hari terakhir</string>
    <string name="gabung_sebagai">Gabung Sebagai</string>
    <string name="relawan_sbr">Relawan SBR</string>
    <string name="alasan_required">Alasan*</string>
    <string name="tulis_alasan_kamu_di_sini">Tulis alasan kamu di sini</string>
    <string name="berikan_alasan_mengapa_anda_layak_menjadi_relawan_sehingga_kami_yakin">*Berikan alasan mengapa anda layak menjadi relawan sehingga kami yakin.</string>
    <string name="gambar_pertumbuhan_pendukung">gambar pertumbuhan pendukung</string>
    <string name="kembali">Kembali</string>
    <string name="anda_adalah">Anda adalah</string>
    <string name="gambar_jadwal">gambar jadwal</string>
    <string name="detail_jadwal">Detail Jadwal</string>
    <string name="umum">Umum</string>
    <string name="mulai">Mulai</string>
    <string name="selesai">Selesai</string>
    <string name="lokasi">Lokasi</string>
    <string name="menunggu_persetujuan_">Menunggu Persetujuan</string>
    <string name="susanto_budi_raharjo">SUSANTO BUDI RAHARJO</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="facebook">FACEBOOK</string>
    <string name="youtube">YOUTUBE</string>
    <string name="www_susantobudiraharjo_com">www.susantobudiraharjo.com</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="alasan">Alasan</string>
    <string name="ubah">Ubah</string>
    <string name="profil_relawan">Profil Relawan</string>
    <string name="tambah_tps">Tambah TPS</string>
    <string name="suara">Suara</string>
    <string name="bukti_required">Bukti*</string>
    <string name="suara_sbr_required">Suara SBR*</string>
    <string name="suara_rival_required">Suara Rival*</string>
    <string name="tambah_rival">Tambah Rival</string>
    <string name="suara_sbr">Suara SBR</string>
    <string name="detail_real_count">Detail Real Count</string>
    <string name="tambah_suara_partai">Tambah Suara Partai</string>
    <string name="suara_rival">Suara Rival</string>
    <string name="bukti">Bukti</string>
    <string name="tipe_wilayah">Tipe Wilayah</string>
    <string name="wilayah">Wilayah</string>
    <string name="list_supporter">List Supporter</string>
    <string name="daftar_pendukung">Daftar Pendukung</string>
    <string name="password_lama_required">Password Lama*</string>
    <string name="masukkan_password_lama">Masukkan password lama anda</string>
    <string name="konfirmasi_password_baru_required">Konfirmasi Password Baru*</string>
    <string name="masukkan_password_baru_anda">Masukkan password baru anda</string>
    <string name="password_baru_required">Password Baru*</string>
    <string name="masukkan_konfirmasi_password_baru_anda">Masukkan konfirmasi password baru anda</string>
    <string name="masukkan_no_hp_baru_anda">Masukkan No. HP baru anda</string>
    <string name="password_required">Password*</string>
    <string name="tidak_ada_interaksi">tidak ada interaksi</string>
    <string name="tidak_ada_data">Tidak ada data</string>
</resources>