<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.profile.change_password.ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <LinearLayout
                android:id="@+id/btn_back_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:paddingEnd="24dp"
                    android:text="@string/ubah_password"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <TextView
                style="@style/MyEditTextLabelStyle"
                android:layout_marginTop="24dp"
                android:text="@string/password_lama_required" />

            <EditText
                android:id="@+id/edt_old_password"
                style="@style/PurpleEditTextStyle"
                android:hint="@string/masukkan_password_lama"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                style="@style/MyEditTextLabelStyle"
                android:layout_marginTop="12dp"
                android:text="@string/password_baru_required" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/PurpleEditTextStyle"
                android:hint="@string/masukkan_password_baru_anda"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                style="@style/MyEditTextLabelStyle"
                android:layout_marginTop="12dp"
                android:text="@string/konfirmasi_password_baru_required" />

            <EditText
                android:id="@+id/edt_password_confirm"
                style="@style/PurpleEditTextStyle"
                android:hint="@string/masukkan_konfirmasi_password_baru_anda"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_red_background"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/simpan"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/red"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

</RelativeLayout>
