<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.dashboard.volunteer.add_volunteer.AddVolunteerFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <!-- Button Back -->
            <LinearLayout
                android:id="@+id/btn_back_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:paddingEnd="24dp"
                    android:text="@string/buat_topik"
                    android:textAlignment="center"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <!-- Banner -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:contentDescription="banner interaksi"
                android:src="@drawable/img_banner_interaction" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/interaksi_lebih_dekat_nbersama_sama"
                android:textSize="20sp" />

            <!-- Form -->
            <TextView
                style="@style/MyEditTextLabelStyle"
                android:text="@string/judul_required" />

            <EditText
                android:id="@+id/edt_judul"
                style="@style/PurpleEditTextStyle"
                android:hint="@string/tulis_judul_di_sini"
                android:importantForAutofill="no"
                android:maxLines="1" />

            <TextView
                style="@style/MyEditTextLabelStyle"
                android:text="@string/pesan_required" />

            <EditText
                android:id="@+id/edt_pesan"
                style="@style/PurpleEditTextStyle"
                android:gravity="top|start"
                android:hint="@string/tulis_sesuatu_di_sini"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="4" />

            <TextView
                style="@style/MyEditTextLabelStyle"
                android:text="@string/lampiran" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_lampiran"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@color/edit_text_background_color"
                app:cardCornerRadius="12dp">

                <ImageView
                    android:id="@+id/img_lampiran"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_attachment_interaction" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/foto_maks_5_mb"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_kirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_red_background"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/kirim"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/red"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

</RelativeLayout>
